--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-minimal
 
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: Voyager Foundation
+description: To take humanity's greatest problems and empower people to collaborate towards solutions and a brighter future.
 
-show_downloads: "false"
+show_downloads: false
 # google_analytics: [Your Google Analytics tracking ID]
