--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Voyager Foundation
 description: Empower people to collaborate towards brighter future.
 
 show_downloads: false
-# google_analytics: [Your Google Analytics tracking ID]
+google_analytics: UA-114304013-1
 
 sass:
     sass_dir: _sass
