vision statement update

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Voyager Foundation
-description: Empower people to collaborate towards brighter future.
+description: Empowering people to collaborate towards a brighter future.
 
 show_downloads: false
 google_analytics: UA-114304013-1
