--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Voyager Foundation
-description: Empowering people to collaborate towards a brighter future.
+title: Changing The World
+description: by empowering people to solve problems together
 
 show_downloads: false
 google_analytics: UA-114304013-1
