--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 _site
 .sass-cache
 .jekyll-metadata
+
+Gemfile
+Gemfile.lock
+node_modules
+package.json
+
+# Jekyll stuff
+/_site/
 _site/
+.sass-cache/
+.jekyll-metadata
+
