--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 title: Changing The World
-description: by empowering people to solve problems together
-baseurl: voyagerfoundation.org
+description: by empowering people to solve problems togethers
 
 show_downloads: false
 google_analytics: UA-114304013-1
